updated with CU affiliation

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@ cellSpacing=5 cellPadding=5 border=0>
             	<tr>
             		<td> <Strong>Danny Dig</Strong> <BR>
             		     Associate Professor <BR>
-            		    <a href="http://eecs.oregonstate.edu"> EECS Department</a> <BR>
-            		    Oregon State University</td>
+            		    <a href="http://cs.colorado.edu"> CS Department</a> <BR>
+            		    University of Colorado</td>
             		<td> Adjunct Professor <BR>
-            		    <a href="http://cs.illinois.edu"> Department of Computer Science</a> <BR>
-            		     U. of Illinois at Urbana-Champaign</td>
+            		    <a href="http://cs.illinois.edu"> CS @ Illinois</a> <BR>
+            		     <a href="http://eecs.oregonstate.edu"> EECS @ OSU</a> </td>
             		<td> 3043 Kelley Engineering Center <BR> 
             		     2500 NW Monroe Ave, <BR>
                          Corvallis, OR 97331-5501 <BR>
@@ -61,11 +61,11 @@ cellSpacing=5 cellPadding=5 border=0>
             <br>
             <Strong> Serving Industry: </Strong> If you are working in industry on AI/ML for IoT systems, I would love to schedule a discovery session to learn how we can serve you with our upcoming <a href="http://ppicenter.org">NSF industry-university consortium</a>.
             <br>
-            <br><Strong> Open Positions: </Strong> looking for a postdoc to join my team.
+           <!-- <br><Strong> Open Positions: </Strong> looking for a postdoc to join my team. -->
             
             <P><Strong>SHORT BIO</Strong> <BR>
-            Danny Dig is an associate professor of computer science in the School
- of EECS at Oregon State University, and an adjunct professor at University of Illinois. 
+            Danny Dig is an associate professor of computer science at the University of Colorado, 
+            and an adjunct professor at University of Illinois and Oregon State. 
  He enjoys doing research in Software Engineering, with a focus on 
  interactive program transformations that improve programmer productivity and software quality. 
  He successfully pioneered interactive program transformations by opening the field of refactoring 
@@ -76,7 +76,7 @@ cellSpacing=5 cellPadding=5 border=0>
   
  <P>He (co-)authored 50+ journal and conference papers that appeared in top
  places in SE/PL. According to Google Scholar his publications have been
- cited 3700+ times. His research was recognized with 8 best paper awards at the flagship and top conferences in SE (FSE'17, ICSME'17, FSE'16, ICSE'14, ISSTA'13, ICST'13, ICSME'15), 
+ cited 4000+ times. His research was recognized with 8 best paper awards at the flagship and top conferences in SE (FSE'17, ICSME'17, FSE'16, ICSE'14, ISSTA'13, ICST'13, ICSME'15), 
  4 award runner-ups, and 1 most influential paper award (N-10 years) at ICSME'15. He received the NSF CAREER award, the Google Faculty Research Award (twice), 
  and the Microsoft Software Engineering Innovation Award (twice).
  He released 9 software systems, among them the
