updated students webpages

--- a/students.html
+++ b/students.html
@@ -57,14 +57,14 @@ cellSpacing=5 cellPadding=5 border=0>
             
             <h3>Former Grad Students</h3>
             <UL>
-            <LI> <a href="http://web.engr.oregonstate.edu/~hiltonm/">Michael Hilton</a> (PhD, April 2017, first job as faculty at CMU)
-            <LI> <a href="http://semihokur.com/">Semih Okur</a> (PhD, Nov 2016, first job at Microsoft, Redmond)
+            <LI> <a href="http://www.cs.cmu.edu/~mhilton/">Michael Hilton</a> (PhD, April 2017, first job as faculty at CMU)
+            <LI> <a href="https://www.microsoft.com/en-us/research/people/seokur/">Semih Okur</a> (PhD, Nov 2016, first job at Microsoft, Redmond)
             <LI> <a href="http://mir.cs.illinois.edu/~yulin2/">Yu Lin</a> (PhD, Sept 2015, first job at Google, Mountain View)
             <LI> Kendall Bailey (MS 2015, first job at Intel, Hillsboro)
             <LI> Shane McKee (MS, first job at Intel, Hillsboro)
-            <LI> <a href="http://people.oregonstate.edu/~codobanm/">Mihai Codoban</a> (MS 2015, first job at Microsoft, Redmond)
-            <LI> <a href="http://web.engr.illinois.edu/~snegara2/">Stas Negara</a> (MS 2008, PhD 2013, first job at Google, Mountain View, CA)
-            <LI> <a href="http://publish.illinois.edu/cos/">Cosmin Radoi</a> (MS 2013, now PhD student at UIUC)
+            <LI> <a href="https://www.linkedin.com/in/mihai-codoban-67818b79/">Mihai Codoban</a> (MS 2015, first job at Microsoft, Redmond)
+            <LI> <a href="https://www.linkedin.com/in/stas-negara-1062071a/">Stas Negara</a> (MS 2008, PhD 2013, first job at Google, Mountain View, CA)
+            <LI> <a href="http://cosmin.radoi.net">Cosmin Radoi</a> (MS 2013, now PhD student at UIUC)
             
             <LI> Sandro Badame (MS 2012, now at Google)
             <LI> Fredrik Kjolstad (MS 2011, now PhD student at MIT)
