updated the CO address

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@ cellSpacing=5 cellPadding=5 border=0>
             		<td> Adjunct Professor <BR>
             		    <a href="http://cs.illinois.edu"> CS @ Illinois</a> <BR>
             		     <a href="http://eecs.oregonstate.edu"> EECS @ OSU</a> </td>
-            		<td> 3043 Kelley Engineering Center <BR> 
-            		     2500 NW Monroe Ave, <BR>
-                         Corvallis, OR 97331-5501 <BR>
-            		     email: <A href="mailto:digd@eecs.oregonstate.edu">digd@eecs.oregonstate.edu</A>
+            		<td> Computer Science <BR> 
+            		     1111 Engineering Drive <BR>
+                          Boulder, CO 80309-0430 USA <BR>
+            		     email: <A href="mailto:Daniel.Dig@colorado.edu">Daniel.Dig@colorado.edu</A>
             		</td>
             	</tr>
             </table>
@@ -76,7 +76,7 @@ cellSpacing=5 cellPadding=5 border=0>
   
  <P>He (co-)authored 50+ journal and conference papers that appeared in top
  places in SE/PL. According to Google Scholar his publications have been
- cited 4000+ times. His research was recognized with 8 best paper awards at the flagship and top conferences in SE (FSE'17, ICSME'17, FSE'16, ICSE'14, ISSTA'13, ICST'13, ICSME'15), 
+ cited <a href="https://scholar.google.com/citations?user=z9MS0rEAAAAJ&hl=en">4000+ times</a>. His research was recognized with 8 best paper awards at the flagship and top conferences in SE (FSE'17, ICSME'17, FSE'16, ICSE'14, ISSTA'13, ICST'13, ICSME'15), 
  4 award runner-ups, and 1 most influential paper award (N-10 years) at ICSME'15. He received the NSF CAREER award, the Google Faculty Research Award (twice), 
  and the Microsoft Software Engineering Innovation Award (twice).
  He released 9 software systems, among them the
