updated the news

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@ cellSpacing=5 cellPadding=5 border=0>
             <P></P>
             <P><STRONG>NEWS: </STRONG></P>
             <UL>
-            <LI> Dec 2019: I will join the University of Colorado Boulder as Associate Professor and Director of the PPI Center. Thank you OSU and colleagues for 6 wonderful years in Corvallis. 
-            <LI> Oct 2019: <a href="https://leadership.engineering.oregonstate.edu/2019-summit-speaker-bios#overlay-context=home">Inspiring our CoE students</a> to grow personally and professionally. I am inspired myself by how engaged are our industry partners and how dedicated they are to the students' success. 
+            <LI> Jan 2020: I will join the University of Colorado Boulder as Associate Professor and Director of the <a href="http://ppicenter.org">PPI Center</a>. Thank you OSU and colleagues for 6 wonderful years in Corvallis. 
+            <LI> Oct 2019: <a href="https://leadership.engineering.oregonstate.edu/2019-summit-speaker-bios#overlay-context=home">Inspiring our CoE students</a> to grow personally and professionally. I am inspired myself by our engaged industry partners and how dedicated they are to the students' success. 
             <LI> Oct 2019: I am honored to receive the Best Reviewer Award at the ICSME'19 conference. Our community is strong because we help each other.
               <LI> June 2019: Many thanks to the mentors and the 30 faculty that made the ICSE'19 <a href="https://2019.icse-conferences.org/track/icse-2019-Faculty-Mentorship-Lunch#About">Faculty Mentorship Roundtables</a> a big success. Our community is strong because of people dedicated to help others grow.
               <LI> May 2019: Honored to deliver a keynote at <a href="https://2019.techdebtconf.org/home#Speakers">TechDebt'19</a>.
