changed email to danny.dig

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ cellSpacing=5 cellPadding=5 border=0>
             		<td> Computer Science <BR> 
             		     1111 Engineering Drive <BR>
                           Boulder, CO 80309-0430 USA <BR>
-            		     email: <A href="mailto:Daniel.Dig@colorado.edu">Daniel.Dig@colorado.edu</A>
+            		     email: <A href="mailto:danny.dig@colorado.edu">danny.dig@colorado.edu</A>
             		</td>
             	</tr>
             </table>
