added office number

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ cellSpacing=5 cellPadding=5 border=0>
             		    <a href="http://cs.illinois.edu"> CS @ Illinois</a> <BR>
             		     <a href="http://eecs.oregonstate.edu"> EECS @ OSU</a> </td>
             		<td> Computer Science <BR> 
-            		     1111 Engineering Drive <BR>
+            		     Office: ECCE 1B15 <BR>
+            		      1111 Engineering Drive <BR>
                           Boulder, CO 80309-0430 USA <BR>
             		     email: <A href="mailto:danny.dig@colorado.edu">danny.dig@colorado.edu</A>
             		</td>
