updated the webpages for CU content

--- a/courses/csci7000-025_S20/milestone2.html
+++ b/courses/csci7000-025_S20/milestone2.html
@@ -8,14 +8,14 @@ and open the template in the editor.
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <title>CS 563 Spring 2018</title>
+    <title>CSCI 7000-025 Spring 2020</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="container">
          <!-- Page Title -->
-        <h1> CS563 Milestone 2</h1>
+        <h1> CSCI 7000-025 Milestone 2</h1>
         <!-- End Page Title -->
         <!-- Nav bar -->
         <div>
@@ -50,7 +50,7 @@ and open the template in the editor.
         </div>
         <h3>HAND-IN:</h3>           
         <p>
-        Each team should submit the PDF and the Presentation Slides (PDF preferred, or PowerPoint), <a href="https://oregonstate.instructure.com/courses/">in Canvas</a>, by 8am on 05/15. Your PDF file name should include the last names of the people in the team.
+        Each team should submit the PDF and the Presentation Slides (PDF preferred, or PowerPoint), in Canvas, by 12pm on TBA. Your PDF file name should include the last names of the people in the team.
         </p>
         <h3>NOTES:</h3>
         <p>
