--- a/courses/csci7000-025_S20/milestone4.html
+++ b/courses/csci7000-025_S20/milestone4.html
@@ -15,7 +15,7 @@ and open the template in the editor.
 <body>
     <div class="container">
          <!-- Page Title -->
-        <h1> CSCI 7000-025 Milestone 3</h1>
+        <h1> CSCI 7000-025 Milestone 4</h1>
         <!-- End Page Title -->
         <!-- Nav bar -->
         <div>
@@ -34,11 +34,12 @@ and open the template in the editor.
          <h3>MILESTONE 3</h3>
          <div>
              <p>
-                 
-              Milestone 3 ...              
-              </p>
+                 Milestone 4 is the last one, and also serves as the last public presentation of your project. 
+                 Unlike the previous milestones, the deliverables for this one is a presentation only. You will 
+                 have a little more time (until Finals week) to submit the final document for your whole project.
+             </p>
              <p>
-                 During this Milestone you present the plan for experimental evaluation of your solution and your results. 
+                 During this Milestone you present the experimental evaluation of your solution and your results. 
                  Convince your colleagues, the professor, and potential conference reviewers that your solution 
                  works, i.e., your solution effectively solves the problems that you listed in the motivation section.
              </p>
@@ -46,7 +47,7 @@ and open the template in the editor.
                  Structure your 10-minute presentation to include the following items:
              </p>
              <ol>
-                <li><h5>MILESTONE 3</h5>
+                <li><h5>MILESTONE 4</h5>
                 Make sure you explicitly list the research questions. Have specific questions, 
                 rather than generic questions. For example, if you built an amazing tool, 
                 Eradicator, a question such as "Is Eradicator useful?" is too vague. Instead, 
@@ -55,16 +56,21 @@ and open the template in the editor.
                 quality, what is its running time, is it scalable, etc.
                 </li>
                 <li> <h5>EMPIRICAL METHODOLOGY</h5>
-                 Here you present the setup of your experiment, the corpus of the data that you plan to use to 
-                 answer the research questions, any procedures that you will follow, etc.
+                 Here you present the setup of your experiment, the corpus of the data that you used to 
+                 answer the research questions, any procedures that you followed, etc.
                 </li>
                 <li> <h5>RESULTS</h5>
-                 Think about the format in which you will present your results.
+                 Here you present the results using graphs, charts, etc. You also interpret the results, 
+                 highlight some of the scenarios where Eradicator did very well, but also those where 
+                 Eradicator did not do well. You can show examples of corner cases where Eradicator did 
+                 not do well and possible explanations. When you present the results, in addition to 
+                 simply showing graphs and charts, you need to address these questions:
 
                  <ul>
                      <li>What are the surprising/unexpected results?</li>
                      <li>What are the outliers?</li>
                      <li>What did you learn?</li>
+                     <li>If you plan to add more data until the Final Submission, where will you get this new data?</li>
                  </ul>
                   
                 You will also present in class your current progress. Cover the same points like in the previous bullet, you could even do a demo. 
@@ -83,9 +89,9 @@ and open the template in the editor.
         <a href="./finalProject.html">Final Project</a>
         report document (due during the Finals Week) will include a section titled Empirical 
         Evaluation. When you will add this section, make sure that you use the same structure 
-        that you used for the M3 and M4 presentations (outlined above). Also, in your final document, 
+        that you used for the M4 presentation (outlined above). Also, in your final document, 
         incorporate the feedback you received during previous Milestones, and the feedback you 
-        received in class for M3 and M4.
+        received in class for M4.
         </p>
     </div>
 </body>
