--- a/courses/csci7000-025_S20/paperCritiques.html
+++ b/courses/csci7000-025_S20/paperCritiques.html
@@ -8,14 +8,14 @@ and open the template in the editor.
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity=" sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <title>CS 563 Spring 2018</title>
+    <title>CSCI 7000-025 Spring 2020</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body> 
     <div class="container">
          <!-- Page Title -->
-        <h1> CS563 Paper Critiques</h1>
+        <h1> CSCI 7000-025 Paper Critiques</h1>
         <!-- End Page Title -->
         <!-- Nav bar -->
         <div>
@@ -33,7 +33,7 @@ and open the template in the editor.
         </div>
         <h3>SUMMARY</h3>
         <div>
-            <p>We will usually have two papers discussed per meeting. Each student need to read 
+            <p>We will usually have one or two papers discussed per meeting. Each student need to read 
             all assigned papers and write reports. 
             <!--but write only one paper critique. You can choose any of the 
             papers listed for that meeting. -->
@@ -97,8 +97,8 @@ and open the template in the editor.
         
         <h3>Paper critique policies</h3>
         <div>
-            <ul><li>Students are welcome to discuss the papers even before writing the report, but reports should be written individually. CS563 uses the standard ethics code for CS courses.
-            </li><li>Reports are due by 5pm PST on the day preceding the class (submitting earlier is OK and encouraged)
+            <ul><li>Students are welcome to discuss the papers even before writing the report, but reports should be written individually. CSCI 7000-025 uses the standard ethics code for CS courses.
+            </li><li>Reports are due by 5pm MST on the day preceding the class (submitting earlier is OK and encouraged)
             </li><li>You can't have any paper critique sent late; if you need an extension, ask in advance, and you may be assigned a make-up paper.
             </li></ul>
         </div>
