--- a/courses/csci7000-025_S20/syllabus.html
+++ b/courses/csci7000-025_S20/syllabus.html
@@ -8,14 +8,14 @@ and open the template in the editor.
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <title>CS 563 Spring 2018</title>
+    <title>CSCI 7000-025 Spring 2020</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="container">
         <!-- Page Title -->
-        <h1> CS563 Syllabus</h1>
+        <h1> CSCI 7000-025 Syllabus</h1>
         <!-- End Page Title -->
         <!-- Nav bar -->
         <div>
@@ -39,19 +39,19 @@ and open the template in the editor.
 
         <h3>PREREQUISITES</h3>
         <div>
-            <p>Students should have basic knowledge of software engineering and 
-            programming languages, as demonstrated by courses such as CS561 and CS562 at OSU. If you are not sure whether you can attend this 
-            course, please consult the instructor (email: <a href="mailto:digd@eecs.oregonstate.edu">digd@eecs.oregonstate.edu</a>)</p>
+            <p>Students should have basic knowledge of Computer Science undergrad classes, including software engineering, 
+            programming languages, systems, ML/AI as demonstrated by undergrad courses at CU. If you are not sure whether you can attend this 
+            course, please consult the instructor (email: <a href="mailto:danny.dig@colorado.edu">danny.dig@colorado.edu</a>)</p>
         </div>
 
         <h3>CREDIT</h3>
         <div>
-            <p>4 hours</p>
+            <p>3 hours</p>
         </div>
 
         <h3>ATTENDANCE</h3>
         <div>
-            <p>Attendance is mandatory. Three or more unexcused absences will result in failure 
+            <p>Attendance is mandatory. Four or more unexcused absences will result in failure 
             of the course. Excused absences include University-related travel (e.g., to 
             attend an academic conference), job interviews, and illness; but please notify 
             me beforehand or as soon as possible.</p>
@@ -59,7 +59,7 @@ and open the template in the editor.
 
         <h3>NEWSGROUP</h3>
         <div class="textBody">
-            <p>All written communication with the staff and other students should be handled through <a href="piazza.com/oregonstate/spring2019/cs563/home">Piazza</a> (you can post public/private questions).</p>
+            <p>All written communication with the staff and other students should be handled through <a href="piazza.com/colorado/spring2020/csci7000025/home">Piazza</a> (you can post public/private questions).</p>
         </div>
         
         <h3>COURSE LOAD</h3>
