--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ cellSpacing=5 cellPadding=5 border=0>
   
  <P>He (co-)authored 50+ journal and conference papers that appeared in top
  places in SE/PL. According to Google Scholar his publications have been
- cited <a href="https://scholar.google.com/citations?user=z9MS0rEAAAAJ&hl=en">4000+ times</a>. His research was recognized with 8 best paper awards at the flagship and top conferences in SE (FSE'17, ICSME'17, FSE'16, ICSE'14, ISSTA'13, ICST'13, ICSME'15), 
+ cited <a href="https://scholar.google.com/citations?user=z9MS0rEAAAAJ&hl=en">4200+ times</a>. His research was recognized with 8 best paper awards at the flagship and top conferences in SE (FSE'17, ICSME'17, FSE'16, ICSE'14, ISSTA'13, ICST'13, ICSME'15), 
  4 award runner-ups, and 1 most influential paper award (N-10 years) at ICSME'15. He received the NSF CAREER award, the Google Faculty Research Award (twice), 
  and the Microsoft Software Engineering Innovation Award (twice).
  He released 9 software systems, among them the
@@ -115,7 +115,8 @@ cellSpacing=5 cellPadding=5 border=0>
             <P></P>
             <P><STRONG>NEWS: </STRONG></P>
             <UL>
-            <LI> Jan 2020: I will join the University of Colorado Boulder as Associate Professor and Director of the <a href="http://ppicenter.org">PPI Center</a>. Thank you OSU and colleagues for 6 wonderful years in Corvallis. 
+            <LI> March 2020: I wrote a blog on <a href="https://medium.com/@dannydig/what-students-need-to-hear-from-their-leader-during-crisis-26db4dab7685">What Students Need to hear from their Advisor during Crisis</a>. You can also use other great resources such as my mentor John Maxwell's recent leadership summit on <a href="https://www.johnmaxwellacademy.com/virtual-summit-march">Leading through Crisis</a>
+            <LI> Jan 2020: I joined the University of Colorado Boulder as Associate Professor and Director of the <a href="http://ppicenter.org">PPI Center</a>. Thank you OSU and colleagues for 6 wonderful years in Corvallis. 
             <LI> Oct 2019: <a href="https://leadership.engineering.oregonstate.edu/2019-summit-speaker-bios#overlay-context=home">Inspiring our CoE students</a> to grow personally and professionally. I am inspired myself by our engaged industry partners and how dedicated they are to the students' success. 
             <LI> Oct 2019: I am honored to receive the Best Reviewer Award at the ICSME'19 conference. Our community is strong because we help each other.
               <LI> June 2019: Many thanks to the mentors and the 30 faculty that made the ICSE'19 <a href="https://2019.icse-conferences.org/track/icse-2019-Faculty-Mentorship-Lunch#About">Faculty Mentorship Roundtables</a> a big success. Our community is strong because of people dedicated to help others grow.
