--- a/research.html
+++ b/research.html
@@ -141,7 +141,7 @@ cellSpacing=5 cellPadding=5 border=0>
 			            <td> FSE 2020
 						<td> Understanding Type Changes in Java
 						<br> Ameya Ketkar, Nikolaos Tsantalis, and Danny Dig
-                        <br> To Appear in Proceedings of <Strong>FSE'20</Strong>, 11 pages, Sacramento, US, Oct 2020.
+                        <br> To Appear in Proceedings of <Strong>FSE'20</Strong>, 11 pages, Sacramento, CA, USA, Oct 2020.
                         <br>  Acceptance ratio: 28% (101/360) 
                         <br>  Companion webpage
                         
