updated dash line

--- a/research.html
+++ b/research.html
@@ -82,7 +82,7 @@ cellSpacing=5 cellPadding=5 border=0>
 			 <td> EMSE 2019
 			 <td> <a href="http://web.engr.oregonstate.edu/~nelsonni/docs/emse19-nelson.pdf">The Life-Cycle of Merge Conflicts: Processes, Barriers, and Strategies</a>
 			 <br> Nicholas Nelson, Caius Brindescu, Shane McKee, Anita Sarma, Danny Dig
-             <br>IEEE Empirical Software Engineering (EMSE), February 2019, pp 1–45.
+             <br>IEEE Empirical Software Engineering (EMSE), February 2019, pp 1-45.
             <tr> 
 			 <td> PACMPL 2017
 			 <td> <a href="http://dig.cs.illinois.edu/papers/Mazinanian_OOPSLA_2017.pdf">Understanding the use of lambda expressions in Java</a>
