--- a/research.html
+++ b/research.html
@@ -73,7 +73,13 @@ cellSpacing=5 cellPadding=5 border=0>
             <P><B>Journals</B> <BR></P>
 						<table cellpadding=5 cellspacing=5> 
  
-              <tr> 
+            <tr> 
+			 <td> TSE 2020
+			 <td> <a href="https://users.encs.concordia.ca/~nikolaos/publications/TSE_2020.pdf">RefactoringMiner 2.0</a>
+			 <br> Nikolaos Tsantalis, Ameya Ketkar, and Danny Dig
+             <br> IEEE Transactions on Software Engineering (TSE), Jul 2020
+             <tr> 
+            <tr> 
 			 <td> TSE 2019
 			 <td> <a href="https://ieeexplore.ieee.org/document/8778723">Version Control Systems: An Information Foraging Perspective</a>
 			 <br> Sruti Srinivasa, Mihai CodobanS, David Piorkowski, Danny Dig, Margaret Burnett
