--- a/courses/OOAD_Sp21/sidebar.html
+++ b/courses/OOAD_Sp21/sidebar.html
@@ -11,7 +11,7 @@
         <li class="sidebar-brand">
             <a href="index.html">
                 <img class="image-responsive" style="max-height: 65px" src="img/osu-tag.png" />
-                CS 361
+                CSCI 4448/5448
             </a>
         </li>
         <li> <a href="index.html">Home</a> </li>
@@ -33,8 +33,6 @@
         <li><a href="hw3.html">Homework 3</a></li>
         <li><a href="hw4.html">Homework 4</a></li>
 
-        <li> Advanced Composition </li>
-        <li><a href="writing.html">Writing assignments</a></li>
 
         <li> Projects </li>
         <li><a href="milestone1.html">Milestone 1</a></li>
@@ -47,8 +45,8 @@
         <li><a href='final-documentation.html'>Final Documentation</a></li>
         <li><a href='final-code.html'>Final Code Submission</a></li>
 
-        <li> Exam </li>
-        <li><a href="final-exam.html">Final Exam</a></li>
+        <li> Exams </li>
+        <li><a href="final-exam.html">Midterm/Final Exam</a></li>
     </ul>
 </div>
 <!-- /#sidebar-wrapper -->
