--- a/courses/OOAD_Sp21/sidebar.html
+++ b/courses/OOAD_Sp21/sidebar.html
@@ -10,7 +10,7 @@
     <ul class="sidebar-nav">
         <li class="sidebar-brand">
             <a href="index.html">
-                <img class="image-responsive" style="max-height: 65px" src="img/osu-tag.png" />
+                <img class="image-responsive" style="max-height: 65px" src="img/cu-tag.png" />
                 CSCI 4448/5448
             </a>
         </li>
