--- a/courses/OOAD_Sp21/sidebar.html
+++ b/courses/OOAD_Sp21/sidebar.html
@@ -16,7 +16,7 @@
         </li>
         <li> <a href="index.html">Home</a> </li>
         <li> Read Me </li>
-
+        <li> <a href="participation.html">Attendance and Participation</a> </li>
         <li> <a href="schedule.html">Schedule</a> </li>
         <li> <a href="http://www.piazza.com/oregonstate/winter2015/cs361/home">Piazza</a> </li>
         <li> <a href="grading.html">Grading & Policy</a> </li>
