--- a/courses/OOAD_Sp21/index.html
+++ b/courses/OOAD_Sp21/index.html
@@ -79,7 +79,7 @@
                         </p>
                         
                          <p>
-                          <b>Grader:</b> <a href="">Vasu Sharma</a><br />
+                          <b>Grader:</b> <a href="https://www.linkedin.com/in/vasu-sharma-21a509b8/">Vasu Sharma</a><br />
                           <i>Email:</i>  Vasu.Sharma [at] colorado.edu  <br />
                           <i>Office:</i> on Zoom <br />
                           <i>Office hours:</i> TBA<br />
