added the schedule

--- a/courses/OOAD_Sp21/sidebar.html
+++ b/courses/OOAD_Sp21/sidebar.html
@@ -18,11 +18,11 @@
         <li> Read Me </li>
         <li> <a href="participation.html">Attendance and Participation</a> </li>
         <li> <a href="schedule.html">Schedule</a> </li>
-        <li> <a href="http://www.piazza.com/oregonstate/winter2015/cs361/home">Piazza</a> </li>
+        <li> <a href="https://piazza.com/colorado/spring2021/csci44485448/home">Piazza</a> </li>
         <li> <a href="grading.html">Grading & Policy</a> </li>
         <li> <a href="textbooks.html">Textbooks</a> </li>
         <li> <a href="faq.html">FAQ</a> </li>
-        <li> <a href="clicker.html">NXT Clicker</a> </li>
+        <li> <a href="clicker.html">iClicker</a> </li>
         <li> <a href="staff-comm.html">Communication with the Staff</a> </li>
         <li> <a href="bug.html">Bug of the Week</a></html>
 
