--- a/courses/OOAD_Sp21/sidebar.html
+++ b/courses/OOAD_Sp21/sidebar.html
@@ -19,7 +19,7 @@
         <li> <a href="participation.html">Attendance and Participation</a> </li>
         <li> <a href="schedule.html">Schedule</a> </li>
         <li> <a href="https://piazza.com/colorado/spring2021/csci44485448/home">Piazza</a> </li>
-        <li> <a href="grading.html">Grading & Policy</a> </li>
+        <li> <a href="grading.html">Grading & Policies</a> </li>
         <li> <a href="textbooks.html">Textbooks</a> </li>
         <li> <a href="faq.html">FAQ</a> </li>
         <li> <a href="clicker.html">iClicker</a> </li>
@@ -27,26 +27,31 @@
         <li> <a href="bug.html">Bug of the Week</a></html>
 
         <li> Assignments </li>
-        <li><a href="hw1.html">Homework 1</a></li>
+        <!-- <li><a href="hw1.html">Homework 1</a></li>
         <li><a href="hw1-pairs.html">Homework 1 pairs</a></li>
         <li><a href="hw2.html">Homework 2</a></li>
         <li><a href="hw3.html">Homework 3</a></li>
         <li><a href="hw4.html">Homework 4</a></li>
-
+        -->
 
         <li> Projects </li>
-        <li><a href="milestone1.html">Milestone 1</a></li>
+        <!-- ><li><a href="milestone1.html">Milestone 1</a></li>
         <li><a href="milestone2.html">Milestone 2</a></li>
         <li><a href="milestone3.html">Milestone 3</a></li>
         <li><a href="milestone4.html">Milestone 4</a></li>
-
+        -->
+        
+        <!--
         <li>Final Project</li>
         <li><a href='final-submission.html'>Final Project Submission</a></li>
         <li><a href='final-documentation.html'>Final Documentation</a></li>
         <li><a href='final-code.html'>Final Code Submission</a></li>
-
+         -->
+         
+         <!--
         <li> Exams </li>
         <li><a href="final-exam.html">Midterm/Final Exam</a></li>
+        -->
     </ul>
 </div>
 <!-- /#sidebar-wrapper -->
