--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Class website for CS 361">
+    <meta name="description" content="Class website for CSCI 4448/5448">
     <meta name="author" content="Danny Dig">
 
     <title>Schedule - CSCI 4448/5448 - Spring 2021</title>
