--- a/courses/OOAD_Sp21/index.html
+++ b/courses/OOAD_Sp21/index.html
@@ -134,7 +134,7 @@
                         This course involves extensive work in programming for projects and assessments and 
                         therefore requires knowledge of programming (this course will primarily use Java, 
                         along with some Python) and basic computer architecture. Corresponding CU Boulder 
-                        courses includes CSCI 1300 and 2270. Both Java and Python are straightforward 
+                        courses includes CSCI 1300, 2270, and CSCI 3308. Both Java and Python are straightforward 
                         languages to install, read, and apply, especially for those with existing 
                         background in other languages (like C, C++, or C#). They are also particularly 
                         suited to object-oriented design projects such as those in this class.
