added Zoom info

--- a/courses/OOAD_Sp21/participation.html
+++ b/courses/OOAD_Sp21/participation.html
@@ -108,8 +108,26 @@
                         <p>
                         Because of COVID-19 mitigation, the majority of contact in the class, including lectures, 
                         will be via Zoom conferencing. To join the class lectures synchronously, use the Zoom meeting 
-                        ID & connection information that was sent to you via the welcome email 
-                        (and is available in Canvas too).
+                        below. 
+                        <p style="color:#FF0000"> <b>VIP: Zoom is set up so that you can only join when authenticated from a colorado.edu account.</b></p>
+                        
+                        <p><b>Join Zoom Meeting <a href="https://cuboulder.zoom.us/j/96158358156">https://cuboulder.zoom.us/j/96158358156</a></b>
+
+Meeting ID: 961 5835 8156
+One tap mobile
++12532158782,,96158358156# US (Tacoma)
++13462487799,,96158358156# US (Houston)
+
+Dial by your location
+        +1 253 215 8782 US (Tacoma)
+        +1 346 248 7799 US (Houston)
+        +1 669 900 6833 US (San Jose)
+        +1 301 715 8592 US (Washington D.C)
+        +1 312 626 6799 US (Chicago)
+        +1 646 558 8656 US (New York)
+Meeting ID: 961 5835 8156
+Find your local number: https://cuboulder.zoom.us/u/akavnHKSj
+
                         </p>      
                     </div>
                 </div>
