--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -48,6 +48,10 @@
                       <h1> Schedule </h1>
                       <h3> Notes </h3>
                       <ul>
+                        <p style="color:#FF0000"> <b>VIP: Zoom is set up so that you can only join when authenticated from a colorado.edu account.</b></p>
+                        
+                        <p><b>To join the lectures synchronously, use this Zoom Meeting <a href="https://cuboulder.zoom.us/j/96158358156">https://cuboulder.zoom.us/j/96158358156</a></b>
+ 
                         <li> All assignments are due on the posted dates at <b>5:00 PM</b></li>
                         <li> Please note <b>this schedule can and likely will change</b>. 
                         As the instructor for this course, I reserve the right to adjust this 
