--- a/courses/OOAD_Sp21/index.html
+++ b/courses/OOAD_Sp21/index.html
@@ -61,7 +61,9 @@
                         </p>
                         <h2> Class Schedule </h2>
                         <p>
-                          <b>Lectures:</b> M/W/F 3:00 - 3:50 PM due to covid-19 mitigation on Zoom (link shared through welcome email, Piazza, and Canvas)
+                          <b>Lectures:</b> M/W/F 3:00 - 3:50 PM due to covid-19 mitigation on Zoom <a href="https://cuboulder.zoom.us/j/96158358156">https://cuboulder.zoom.us/j/96158358156</a>
+                         <p style="color:#FF0000"> <b>VIP: Zoom is set up so that you can only join when authenticated from a colorado.edu account.</b></p>
+  
                         </p>
                         <h2>Staff</h2>
                         <p>
