updated clicker instructions

--- a/courses/OOAD_Sp21/clicker.html
+++ b/courses/OOAD_Sp21/clicker.html
@@ -89,7 +89,9 @@
                         <p> For the Spring 2021 semester, CU students do not need to purchase an iClicker Reef subscription to use mobile polling. Create a <a href="https://oit.colorado.edu/node/24881">free iClicker Reef account</a> now!
                         </p>
                         <p>
-                          <a href="https://oit.colorado.edu/node/24881">Create a free iClicker Reef account</a>: An iClicker Reef account is required for your iClicker grade to count whether you’re in person or learning remotely.
+                          <a href="https://oit.colorado.edu/node/24881">Create a free iClicker Reef account</a>: An iClicker Reef account is required for your iClicker grade to count. When you get to Step 5 of the instructions, in 
+                        </p>
+                        <p> <a href="https://oit.colorado.edu/tutorial/cuclickers-using-iclicker-reef-class">Find and Register for your courses</a>. Follow the instructions in this tutorial. When you search for course, please use "Object Oriented Analysis and Design" in the search field.
                         </p>
 
                         <h3>How do I get points?</h3>
