update clicker instructions

--- a/courses/OOAD_Sp21/clicker.html
+++ b/courses/OOAD_Sp21/clicker.html
@@ -89,7 +89,7 @@
                         <p> For the Spring 2021 semester, CU students do not need to purchase an iClicker Reef subscription to use mobile polling. Create a <a href="https://oit.colorado.edu/node/24881">free iClicker Reef account</a> now!
                         </p>
                         <p>
-                          <a href="https://oit.colorado.edu/node/24881">Create a free iClicker Reef account</a>: An iClicker Reef account is required for your iClicker grade to count. When you get to Step 5 of the instructions, in 
+                          An iClicker Reef account is required for your iClicker grade to count.
                         </p>
                         <p> <a href="https://oit.colorado.edu/tutorial/cuclickers-using-iclicker-reef-class">Find and Register for your courses</a>. Follow the instructions in this tutorial. When you search for course, please use "Object Oriented Analysis and Design" in the search field.
                         </p>
@@ -105,13 +105,13 @@
                           Students get 1 point for "participation" and 0.25 performance points for each correct answer with a maximum of 1 performance point / lecture.
                         </p>
 
-                        <h3>How do I register it?</h3>
+                        <h3>How do I link it with Canvas?</h3>
                         <p>
-                          Next, you will need to <a href="https://oit.colorado.edu/tutorial/cuclickers-sync-your-iclicker-reef-account-canvas">link your iClicker Reef with Canvas for the class</a>.
+                          Notice that due to a technical glitch (we notified OIT) you cannot yet link it with Canvas. Once we announce that this was fixed, you will need to <a href="https://oit.colorado.edu/tutorial/cuclickers-sync-your-iclicker-reef-account-canvas">link your iClicker Reef with Canvas for the class</a>.
                           <!--You will still need to bring the clicker to the first class - it will work even without being registered.-->
                         </p>
                         <p><b>
-                          The deadline to link your iClicker Reef with Canvas is Fri, Jan 22nd.
+                          The deadline to link your iClicker Reef with Canvas is Fri, Jan 22nd (assuming that OIT solves the integration problem by then).
                           You will loose all previously accumulated points if you don't register your device by Jan 22nd. 
                         </b></p>
                     </div>
