--- a/courses/OOAD_Sp21/clicker.html
+++ b/courses/OOAD_Sp21/clicker.html
@@ -46,7 +46,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <!-- Content goes here -->
-                        <h1>CU iClicker for students taking the Synchronous offering of the course</h1>
+                        <h1>CU iClicker for students attending the live lectures</h1>
                         <h3>What is an iClicker?</h3>
                         <p>
                           iClicker is an in-class student response system designed to better engage
