added welcome text

--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -77,7 +77,7 @@
                             <td> Fri, Jan 15</td>
                             <td> Introductions: Staff, Students, Expectations </td>
                             <td> </td>
-                            <td> <a href="https://piazza.com/colorado/spring2021/csci44485448">Signup on Piazza</a> </td>
+                            <td> <a href="https://piazza.com/colorado/spring2021/csci44485448">Signup on Piazza</a>, and for those attending live <a href="https://danny.cs.colorado.edu/courses/OOAD_Sp21/clicker.html">Register a free iClicker Account</a></td>
                           </tr>
                           <tr>
                             <td> Mon, Jan 18</td>
