--- a/courses/OOAD_Sp21/clicker.html
+++ b/courses/OOAD_Sp21/clicker.html
@@ -91,7 +91,8 @@
                         <p>
                           An iClicker Reef account is required for your iClicker grade to count.
                         </p>
-                        <p> <a href="https://oit.colorado.edu/tutorial/cuclickers-using-iclicker-reef-class">Find and Register for your courses</a>. Follow the instructions in this tutorial. When you search for course, please use "Object Oriented Analysis and Design" in the search field.
+                        <p> <a href="https://oit.colorado.edu/tutorial/cuclickers-using-iclicker-reef-class">Find and Register for your courses</a>. Follow the instructions in this tutorial. 
+                        When you search for course, please use "Object Oriented Analysis and Design" in the search field. You should be able to find our course listed under the offerings from CU Boulder that provide iClicker (our offering will have instructor's Danny Dig name).
                         </p>
 
                         <h3>How do I get points?</h3>
