--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -89,13 +89,13 @@
                             <td> Wed, Jan 20</td>
                             <td> Intro to OOAD </td>
                             <td> </td>
-                            <td> </td>
+                            <td> Quiz #1 (see Canvas)</td>
                           </tr>
                           <tr>
                             <td> Fri, Jan 22</td>
                             <td> Syllabus and Projects </td>
                             <td> </td>
-                            <td> Homework 1 </td>
+                            <td> Homework 1 (see Canvas)</td>
                           </tr>
                           <tr>
                             <td> Mon, Jan 25</td>
