--- a/courses/OOAD_Sp21/sidebar.html
+++ b/courses/OOAD_Sp21/sidebar.html
@@ -35,6 +35,7 @@
         -->
 
         <li> Projects </li>
+        <li><a href="projectTracks.html">Project Tracks</a></li>
         <!-- ><li><a href="milestone1.html">Milestone 1</a></li>
         <li><a href="milestone2.html">Milestone 2</a></li>
         <li><a href="milestone3.html">Milestone 3</a></li>
