--- a/courses/OOAD_Sp21/projectTracks.html
+++ b/courses/OOAD_Sp21/projectTracks.html
@@ -108,7 +108,7 @@
 
                         </p>
                         
-                        <h1>For Grad students -- the Industry-relevant track</h1>
+                        <h1>For Grad students -- the Industry-novel track</h1>
                         <p> In addition to the first 8 weeks working on the Battleship game designing and implementing 
                         the OO business logic, you will work on a research project that is industry-relevant.
                         </p>
