--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -105,8 +105,8 @@
                           </tr>
                            <tr>
                             <td> Wed, Jan 27</td>
-                            <td> OO Fundamentals </td>
-                            <td> </td>
+                            <td> Version Control, Git Demo </td>
+                            <td> read chapters 2, 4, and 8 from this <a href="https://ericsink.com/vcbe/vcbe_usletter_lo.pdf">book</a> </td>
                             <td> </td>
                           </tr>
                            <tr>
