--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -87,7 +87,7 @@
                           </tr>
                           <tr>
                             <td> Wed, Jan 20</td>
-                            <td> Intro to OOAD </td>
+                            <td> Intro to OOAD course</td>
                             <td> </td>
                             <td> Quiz #1 (see Canvas)</td>
                           </tr>
