--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -112,7 +112,7 @@
                            <tr>
                             <td> Fri, Jan 29</td>
                             <td> Design Fest: CRC </td>
-                            <td> <a hef="https://dl.acm.org/doi/10.1145/74877.74879">CRC paper</a></td>
+                            <td> <a href="http://dl.acm.org/citation.cfm?id=74879"> CRC Paper </a></td>
                             <td> </td>
                           </tr>
                           </table>
