updated with Canvas link

--- a/courses/OOAD_Sp21/gradProjectProposal.html
+++ b/courses/OOAD_Sp21/gradProjectProposal.html
@@ -87,7 +87,7 @@
                         topics for each track, and also lists examples of academic-novel projects that grad students conducted in Professor Dig's classes (and some students even published in academic conferences).
                         
                         <h1>Submission and Presentation Procedure</h1>
-                        <p> You need to submit a PDF file (e.g. you can use PowerPoint, OpenOffice, or Keynote, but please convert them to PDF) addressing the points in the templates above. Submit the PDF on Canvas, <b>before 12PM on 02/05</b>. 
+                        <p> You need to submit a PDF file (e.g. you can use PowerPoint, OpenOffice, or Keynote, but please convert them to PDF) addressing the points in the templates above. Submit the <a href="https://canvas.colorado.edu/courses/70627/assignments/988906">PDF on Canvas</a>, <b>before 12PM on 02/05</b>. 
                         Afterwards, the professor will load all presentations on his laptop. 
                         Students will have <b>two minutes</b> on class on Friday (02/05) to pitch their idea on Zoom (while the professor will share the slides from his laptop - this will eliminate valuable time lost in switching screen sharing on Zoom). For students who are not attending the live session of the class, we will
                         offer an opportunity to pitch their project idea on Piazza.
